@@ -19,6 +19,8 @@ FIXES
 
  * Classes UI history tab error
 
+ * Wrong activity selection after going on completed state
+
 
 
 
